Some basic styling and content in place

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,44 @@
+@import url("https://use.typekit.net/ztm3uzv.css");
+
+body {
+  background: rgb(216, 226, 255);
+  background: linear-gradient(
+    0deg,
+    rgb(170, 186, 233) 0%,
+    rgb(142, 165, 236) 50%,
+    rgba(111, 111, 221, 1) 100%
+  );
+  font-family: calling-code, sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+h1 {
+  font-family: calling-code, sans-serif;
+  font-weight: 700;
+  font-style: normal;
+  font-size: 3rem;
+}
+
 .container {
+  height: 100vh;
   text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  color: white;
+}
+
+.Header {
+  margin-top: 10vh;
+}
+
+.bikeImg {
+  width: 100vw;
+}
+
+.Answer {
+  margin-bottom: 10vh;
+  font-size: 4rem;
 }
