--- a/src/App.css
+++ b/src/App.css
@@ -34,6 +34,11 @@ h1 {
   margin-top: 10vh;
 }
 
+.weatherText {
+  margin: 0 20px 0 20px;
+  font-size: 0.8rem;
+}
+
 .bikeImg {
   width: 100vw;
 }
