--- a/src/App.css
+++ b/src/App.css
@@ -47,3 +47,27 @@ h1 {
   margin-bottom: 10vh;
   font-size: 4rem;
 }
+
+@media screen and (min-width: 750px) and (min-height: 1023px) {
+  /* iPad Pro */
+  .bikeImg {
+    width: 70vw;
+  }
+
+  .weatherText {
+    margin: 0 20px 0 20px;
+    font-size: 1rem;
+  }
+}
+
+@media screen and (min-width: 1024px) and (max-height: 1310px) {
+  /* Laptop */
+  .bikeImg {
+    width: 25vw;
+  }
+
+  .weatherText {
+    margin: 0 20px 0 20px;
+    font-size: 1.2rem;
+  }
+}
